--- a/FlickMeter.Web/app/views/latestMovies.html
+++ b/FlickMeter.Web/app/views/latestMovies.html
@@ -7,7 +7,7 @@
     <h5>No Movies found!!</h5>
 </div>
 <div class="list-group" data-ng-show="totalRecordsCount > 0">
-    <div class="list-group-item col-md-6" ng-repeat="movie in movies">
+    <div class="list-group-item" ng-repeat="movie in movies">
         <table>
             <tr>
                 <td>
