--- a/FlickMeter.Web/app/views/latestMovies.html
+++ b/FlickMeter.Web/app/views/latestMovies.html
@@ -16,7 +16,7 @@
                 <td style="padding-left: 15px; vertical-align: top">
                     <h4 class="list-group-item-heading"><a href="#/movie/{{movie.id}}">{{movie.title}}</a></h4>
                     <h5>3/5</h5>
-                    <h5>Cast: {{movie.artists}}</h5>
+                    <h5>Cast: {{movie.hero}}, {{movie.heroin}}, {{movie.characterArtists}}</h5>
                     <h5>Director: {{movie.director}}</h5>
                     <h5>Music Director: {{movie.musicDirector}}</h5>
                     <h5>Producer: {{movie.producer}}</h5>
