--- a/FlickSome.Web/Views/Shared/_Layout.cshtml
+++ b/FlickSome.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="~/Admin/Movies">Movies</a></li>
                         <li><a href="~/Admin/Reviews">Reviews</a></li>
+                        <li><a href="~/Admin/Reviewers">Reviewers</a></li>
                         <li><a href="~/Admin/Admin">Admins</a></li>
                     </ul>
                 }
